--- a/resume.html
+++ b/resume.html
@@ -9,9 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Maykon da Silva" />
 
 
-<title>About</title>
+<title>Resume</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -285,16 +286,55 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
+<h1 class="title toc-ignore">Resume</h1>
+<h4 class="author">Maykon da Silva</h4>
+<h4 class="date">3/19/2022</h4>
 
 </div>
 
 
-<font size="4">
-<center>
-The navigation bar on this website provides access to my resume, recent work, publications, awards, Github, LinkedIn, and email for contact. Feel free to email me with any inquiries or opportunities you would like to share.
-</center>
-<p></font></p>
+<div id="maykon-junior-da-silva" class="section level1">
+<h1><strong>Maykon Junior da Silva</strong></h1>
+<p>Falcon Heights, MN</p>
+<p>E-mail: <a href="mailto:mjdasilv@umn.edu" class="email">mjdasilv@umn.edu</a></p>
+<div id="education" class="section level2">
+<h2><strong>Education</strong></h2>
+<p><strong>University of Minnesota:</strong> Master of Science/MS. Soybean Production and Physiology Lab – 2021/Current</p>
+<p><strong>Federal University of Santa Maria (UFSM):</strong> B. S. Agronomic Engineering (Agronomy and Crop Science), Santa Maria, Rio Grande do Sul, Brazil – 2013/2017.</p>
+</div>
+<div id="languages" class="section level2">
+<h2><strong>Languages</strong></h2>
+<p>Portuguese: Native</p>
+<p>English: Bilingual proficiency</p>
+<p>Spanish: Intermediary</p>
+</div>
+<div id="professional-experience" class="section level2">
+<h2><strong>Professional Experience:</strong></h2>
+<p><strong>CFANS – U of M College of Food, Agricultural and Natural Resources Sciences:</strong> Graduate Research Assistant. (Jan, 2021 – Present).</p>
+<p>Soybean research with emphasis in management strategies for Iron Deficiency Chlorosis. Designing experiments, coordinate field work to ensure implementation of protocols, taking detailed crop measurements throughout the growing season, conducting statistical analysis of biological data.</p>
+<p><strong>CFANS – U of M College of Food, Agricultural and Natural Resources Sciences:</strong> Student Trainee (May, 2019 – Oct, 2020).</p>
+<p>Participation in several activities involving the conduction of research projects focused on soybean production and physiology across the state of Minnesota: packaging seeds, soil sampling, assisting with planting and harvesting, applying seed treatments, plot maintenance, drone operation.</p>
+<p><strong>Fertilizantes Piratini Ltda:</strong> Commercial Supervisor. (Jun, 2018 – May, 2019).</p>
+<p>Responsible for the commercialization of fertilizers for soybean, corn, and wheat producers in the South of Brazil. Responsible for the sale and delivery of fertilizers, prospecting of new clients, and maintenance of current customers (co-ops, sellers and farmers).</p>
+<p><strong>Fertilizantes Piratini Ltda:</strong> Commercial Trainee. (Mar, 2018 – Jun, 2018).</p>
+<p>Preparation period for Commercial Supervisor, focused on getting to know the region of operation and work methodology of the company.</p>
+<p><strong>Tropical Plant Breeding and Genetics (TMG):</strong> Trainee in the Soybean Breeding Program. (Aug, 2017 – Dec, 2017).</p>
+<p>A mandatory internship held in Passo Fundo, Rio Grande do Sul, Brazil, and based on conducting field trials (management of offsprings, sowing of trials, pest and disease monitoring, evaluation of agronomic traits of interest, harvesting and processing).</p>
+<p><strong>Tropical Plant Breeding and Genetics (TMG):</strong> Trainee in the Soybean and Corn Breeding Programs. (Dec, 2016 – Mar, 2017).</p>
+<p>Extracurricular internship in Rondonópolis-MT, which provided participation in all stages of the development of new cultivars of soybean and corn. Direct hybridization, conduction of field trials, agronomic characters evaluations and genetic seed production.</p>
+<p><strong>Monsanto:</strong> Trainee. 40 hours (Mar, 2017 – Mar, 2017)</p>
+<p>Monsanto Prime Program: Participation in career fairs (Fair Expodireto 2017), providing the involvement in the different business areas of the company.</p>
+<p><strong>Laboratory of Plant Breeding and Dry Bean Management (UFSM):</strong> Scholarship and Voluntary Trainee. 20 hours/week (Sep, 2013 – Jul, 2017).</p>
+<p>Development of new dry bean varieties for agronomic, nutritional, and cooking characteristics for the Southern region of Brazil.</p>
+</div>
+<div id="bibliographic-productions" class="section level2">
+<h2><strong>Bibliographic Productions:</strong></h2>
+<p><strong>Articles published in scientific journals:</strong></p>
+<p>1: POSSOBOM, M. T. D. F.; RIBEIRO, N. D.; CASAGRANDE, C. R.; <strong>SILVA, M. J.</strong> Inheritance pattern of zinc (Zn) concentration in Middle American and Andean common bean (<em>Phaseolus vulgaris</em> L.) seeds. AUSTRALIAN JOURNAL OF CROP SCIENCE (ONLINE), v. 12, p. 524-530, 2018.</p>
+<p>2: RIBEIRO, NERINÉIA DALFOLLO; DE MARCO STECKLING, SKARLET; MAZIERO, SANDRA MARIA; <strong>DA SILVA, MAYKON JUNIOR</strong>; KLÄSENER, GREICE ROSANA; CASAGRANDE, CLEITON RENATO. Experimental precision of grain yield components and selection of superior common bean lines. EUPHYTICA, v. 213, p. 290, 2017.</p>
+<p>3: ZEMOLIN, A. E. M.; RIBEIRO, N. D.; CASAGRANDE, C. R.; <strong>SILVA, M. J.</strong>; ARNS, F. D. Genetic parameters of iron and zinc concentrations in Andean common bean seeds. Acta Scientiarum. Agronomy (Online), 2016.</p>
+</div>
+</div>
 
 
 
