--- a/index.html
+++ b/index.html
@@ -258,6 +258,18 @@ $(document).ready(function () {
     </li>
   </ul>
 </li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Recent Work
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="flexdashboard_template-2.html">Flexdashboard</a>
+    </li>
+  </ul>
+</li>
 <li>
   <a href="mailto:&lt;mjdasilv@umn.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
