--- a/index.html
+++ b/index.html
@@ -270,6 +270,12 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="https://storymaps.arcgis.com/stories/37bddb3f84ce4ab19e5dd65e1bceba70">Story Maps - UAV:IDC</a>
+    </li>
+    <li>
+      <a href="https://maykondasilva.github.io/soccerstats.github.io/">Soccer Stats Website</a>
+    </li>
+    <li>
       <a href="flexdashboard_template_2.html">Flexdashboard</a>
     </li>
     <li>
