--- a/resume.html
+++ b/resume.html
@@ -320,7 +320,8 @@ $(document).ready(function () {
 
 <div id="maykon-junior-da-silva" class="section level1">
 <h1><strong>Maykon Junior da Silva</strong></h1>
-<p>Falcon Heights, MN</p>
+<p>Driven agronomist working with soybean management and physiology. Core skills include Agricultural Research, Crop Production, Remote Sensing, Statistical Analysis, and Teamwork.</p>
+<p>Saint Paul, MN</p>
 <p>E-mail: <a href="mailto:mjdasilv@umn.edu" class="email">mjdasilv@umn.edu</a></p>
 <div id="education" class="section level2">
 <h2><strong>Education</strong></h2>
