--- a/resume.html
+++ b/resume.html
@@ -259,7 +259,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="resume.html">Resume</a>
+      <a href="https://github.com/maykondasilva/maykondasilva.github.io/blob/main/photos/resume.pdf">Resume</a>
     </li>
   </ul>
 </li>
